vemo-app/main/default/objects/DefermentRule__c/DefermentRule__c.object-meta.xml
<CustomObject>
    <label>Deferment Rule</label>
    <nameField>
        <displayFormat>DR-{00000000}</displayFormat>
        <label>Deferment Rules Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>