vemo-app/main/default/objects/DefermentRule__c/fields/DefermentType__c.field-meta.xml
<CustomField>
    <fullName>DefermentType__c</fullName>
    <label>Deferment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DefermentType</valueSetName>
    </valueSet>
</CustomField>