vemo-app/main/default/objects/DefermentRule__c/fields/PaymentExpected__c.field-meta.xml
<CustomField>
    <fullName>PaymentExpected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Expected</label>
    <type>Checkbox</type>
</CustomField>