vemo-app/main/default/objects/DefermentRule__c/fields/PaymentTermExtended__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermExtended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Term Extended</label>
    <type>Checkbox</type>
</CustomField>